--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@nestjs/testing": "^5.0.0",
     "@nestjs/websockets": "^5.0.0",
     "@types/graphql-iso-date": "^3.3.0",
+    "@types/lodash": "^4.14.116",
     "@types/moment": "^2.13.0",
     "@types/pluralize": "^0.0.29",
+    "@types/voca": "^1.4.0",
     "apollo-server-express": "1.3.2",
     "changeset": "^0.2.1",
     "fastify-formbody": "^2.0.0",
@@ -41,7 +43,8 @@
     "rxjs": "^6.0.0",
     "sqlite3": "^4.0.2",
     "typeorm": "^0.2.7",
-    "typescript": "^2.6.2"
+    "typescript": "^2.6.2",
+    "voca": "^1.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.0.39",
