--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "moment": "^2.22.2",
     "mongodb": "^3.1.4",
     "mysql": "^2.16.0",
-    "nsq.js": "^1.1.0",
+    "nsqjs": "^0.10.1",
     "pg": "^7.4.3",
     "pluralize": "^7.0.0",
     "reflect-metadata": "^0.1.12",
