--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "prestart:prod": "rm -rf dist && tsc",
     "start:prod": "node dist/main.js",
     "start:hmr": "node dist/server",
-    "test": "jest",
+    "test": "npm run test:unit && npm run test:e2e && npm run test:cov",
+    "test:unit": "jest",
     "test:cov": "jest --coverage",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "cd test && jest --config ./jest-e2e.json",
     "webpack": "webpack --config webpack.config.js"
   },
   "dependencies": {
