--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ node_js:
   - 8.9.0
 before_script:
   - npm install -g codecov
-script: npm test
+script:
+  - npm test
+  - make build tag push
 after_success:
   - codecov
