--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,11 @@ node_js:
   - 8.9.0
 before_script:
   - npm install -g codecov
-script:
-  - npm test
-  - make build tag push
+jobs:
+  include:
+    - stage: test
+      script: npm test
+    - stage: deploy
+      script: make build tag push
 after_success:
   - codecov
