--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/graphql-iso-date": "^3.3.0",
     "@types/lodash": "^4.14.116",
     "@types/moment": "^2.13.0",
+    "@types/nsqjs": "^0.9.0",
     "@types/pluralize": "^0.0.29",
     "@types/voca": "^1.4.0",
     "apollo-server-express": "1.3.2",
