Fix graphql boolean parsing

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "webpack": "webpack --config webpack.config.js"
   },
   "dependencies": {
-    "@nestjs/common": "^5.0.0",
-    "@nestjs/core": "^5.0.0",
+    "@nestjs/common": "5.3.11",
+    "@nestjs/core": "5.3.11",
     "@nestjs/graphql": "^3.0.0",
     "@nestjs/microservices": "^5.0.0",
     "@nestjs/testing": "^5.0.0",
