--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "changeset": "^0.2.1",
     "fastify-formbody": "^2.0.0",
     "glob": "^7.1.2",
+    "gql-directives": "0.0.4",
     "graphql": "^14.0.2",
+    "graphql-directives": "^0.0.1",
     "graphql-iso-date": "^3.5.0",
     "graphql-playground-middleware-express": "^1.7.3",
     "graphql-tools": "^4.0.1",
