--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "moment": "^2.22.2",
     "mongodb": "^3.1.4",
     "mysql": "^2.16.0",
+    "newrelic": "^5.6.2",
     "nsqjs": "^0.10.1",
     "pg": "^7.4.3",
     "pluralize": "^7.0.0",
